<resources>
    <string name="app_name">The end of the Path</string>
    <string name="main_activity_name">The end of the Path </string>
    <string name="text_dialog_window">Are you sure you want to exit?</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="dialog_no_button">No</string>
    <string name="leverListHead">Select level</string>
    <string name="play_button_head">Play</string>
    <string name="exit_button_head">Exit</string>
    <string name="head_dialog_death">You died...Continue?</string>
    <string name="toast_name">Tap again to select a level</string>
</resources>