<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu_art"
    android:orientation="horizontal"
    tools:context=".MainMenu"
     tools:ignore="ExtraText">

    <TextView
        android:id="@+id/main_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackadder"
        android:text="@string/main_activity_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_for_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:padding="1dp"
        android:src="@drawable/play_button_expor_notouch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_menu_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="55dp"/>

    <ImageButton
        android:id="@+id/button_for_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="124dp"
        android:background="@null"
        android:padding="1dp"
        android:src="@drawable/button_for_exit_notouch_export"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackadder"
        android:text="@string/play_button_head"
        android:textColor="#B30000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_for_play"
        app:layout_constraintEnd_toEndOf="@+id/button_for_play"
        app:layout_constraintStart_toStartOf="@+id/button_for_play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackadder"
        android:text="@string/exit_button_head"
        android:textColor="#B30000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button_for_play"
        app:layout_constraintEnd_toEndOf="@+id/button_for_exit"
        app:layout_constraintStart_toStartOf="@+id/button_for_exit" />

</androidx.constraintlayout.widget.ConstraintLayout>